--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -6,19 +6,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%- title %></title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!-- Material icon -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <title>Table 練習</title>
   <link rel="stylesheet" href="./assets/style/all.css">
 </head>
 
 <body>
-  <header class="header">
-    這是 header
-  </header>
+  <div class="d-flex h-100">
+    <div class="d-flex flex-column justify-content-between w-25 pt-4-5 pb-4-5 gray-100">
+      <div>
+        <div class="ps-4-5 mb-4-5 d-flex align-items-center" role="button">
+          <img src="assets/images/logo-ANSWER.svg" alt="">
+        </div>
+        <ul class="list-unstyled side-menu">
+          <li class="ps-4-5 mb-4 d-flex">
+            <span class="material-symbols-outlined me-3 d-flex align-items-center">
+              insert_chart
+            </span>
+            <a href="#" class="mb-0 fw-bold lh-lg">Dashboard</a>
+          </li>
+          <li class="ps-4-5 mb-4 d-flex">
+            <span class="material-symbols-outlined me-3 d-flex align-items-center">
+              forum
+            </span>
+            <a href="#" class="mb-0 fw-bold lh-lg">Question</a>
+          </li>
+          <li class="ps-4-4 mb-4 d-flex border-start border-success border-4">
+            <span class="material-symbols-outlined me-3 text-success d-flex align-items-center">
+              assignment
+            </span>
+            <a href="#" class="mb-0 fw-bold text-success lh-lg">Assignment</a>
+          </li>
+          <li class="ps-4-5 mb-4 d-flex">
+            <span class="material-symbols-outlined me-3 d-flex align-items-center">
+              video_library
+            </span> 
+            <a href="#" class="mb-0 fw-bold lh-lg">Course</a>
+          </li>
+          <li class="ps-4-5 mb-4 d-flex">
+            <span class="material-symbols-outlined me-3 d-flex align-items-center">
+              group
+            </span>
+            <a href="#" class="mb-0 fw-bold lh-lg">Admin</a>
+          </li>
+          <li class="ps-4-5 d-flex">
+            <span class="material-symbols-outlined me-3 d-flex align-items-center">
+              settings
+            </span>
+            <a href="#" class="mb-0 fw-bold lh-lg">Settings</a>
+          </li>
+        </ul>
+      </div>
+      <div class="d-flex align-items-center ps-4-5">
+        <a href="#"><div class="w-40 h-40 overflow-hidden bg rounded-circle me-3" role="button" style="background-image: url('assets/images/andychen.jpeg');"></div></a>
+        <div>
+          <a href="#" class="mb-1 fw-bold">Andy Chen</a>
+          <p class="mb-0 fsz-14px text-black-50">andy0401@mail.com</p>
+        </div>
+      </div>
+    </div>
+    <div class="w-100 pb-4-5">
+      <%- contents %>
+    </div>
+  </div>
 
-  <%- contents %>
+  
 
-  <footer class="footer">
-    footer
-  </footer>
+  
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+  crossorigin="anonymous"></script>
   <script src="./assets/js/vendors.js"></script>
   <script src="./assets/js/all.js"></script>
 </body>
